执行遗漏的1.4.7 后端移除 `resume_data_id` 兼容代码
